@@ -12,7 +12,10 @@ ARG GITHUB_TOKEN
 
 WORKDIR /workspace
 
-RUN apk add --no-cache git sed findutils coreutils make npm curl gawk \
+RUN jlink --compress=2 --module-path /opt/jdk/jmods \
+       --add-modules java.base,java.logging,java.xml,java.desktop,java.management,java.sql,java.naming \
+       --output /jlinked \
+    && apk add --no-cache git sed findutils coreutils make npm curl gawk \
     && git config --global advice.detachedHead false
 
 ENV DOCKER=build
@@ -44,9 +47,12 @@ RUN apk add --no-cache tzdata \
     && cp /usr/share/zoneinfo/America/New_York /etc/localtime \
     && echo "America/New_York" > /etc/timezone
 
-ENV JVM_MEM_ARGS="-Xms32M -Xmx256M" \
+ENV JAVA_HOME=/opt/jdk \
+    PATH=/opt/jdk/bin:$PATH \
+    JVM_MEM_ARGS="-Xms32M -Xmx256M" \
     JVM_ARGS=""
 
+COPY --from=prep /jlinked /opt/jdk
 COPY --from=prep /workspace/build/libs/service.jar /service.jar
 
 COPY startup.sh startup.sh
